v0.1.26 (2018-07-21)
- fix for shared folders change tracking -- STRM creation - shared folders do not work with change tracking #74
- added additional logging and exception handling to scheduler executer
- fix non-catalog "save to STRM"
- fix for STRM counting
- ensure preferred_quality has override=true in menu and STRM creation
- fix: STRM creation - Change tracking not working in this 1 case #69
- correction for folderid when "create scheduled job" -- using incorrectly as team drive id whereas it should default to root
- implement: STRM creation - tv shows & catalog - preserve show title #72
- fix: add fallback to original if there are no transcode links
- fix: original taking precedence over override #68
v0.1.25 (2018-06-12)
- add STRM creation parameter - skip partial files
- fix for STRM logging
- add pquality=3 = original
- fix: Windows - \ is being replaced by %5C in settings #62
- fixing: Failed to pull down .nfo and .srt #61
- reset running scheduled jobs on load
- fixing missing parameters on scheduled task
- implement: Add an option to reset the runtime status of scheduled jobs #59
v0.1.24 (2018-05-20)
- substitue title name for folder name: Allow the user create scheduled tasks for a particular folder #58
v0.1.23 (2018-05-19)
- add a parameter to STRM creation routine for: Download SRT and NFO when available. #46
- remove NFO and SRT from saving to cloud spreadsheet and STRM log
- implement: Download SRT and NFO when available. #46
- add subtitles and nfo files to media collection objects and assign these MEDIA_VIDEO_HELPER file type
- improvement: for downloadGeneralFile, move up the file check before the web call
- fix: strm creation not inserting 'http://' at the start #57
v0.1.22 (2018-05-18)
- implemented: Scheduling STRM support non-catalog structures #45
- testing: Scheduling STRM support non-catalog structures #45
- remove logging for favicon
- improvements for STRM creation - remove blank lines from log