@@ -996,14 +996,14 @@ class contentengine(object):
                         xbmcgui.Dialog().booleanSelector('force overwrite existing STRM?','force', False)
                         if folderID != '' :
                             xbmcgui.Dialog().booleanSelector('download nfo and srt files that are stored alongside media?','helperfiles', False)
-                            xbmcgui.Dialog().booleanSelector('catalog STRMs into folders according to movie/tv/other?','catalog', disable=['remove_ext', 'true', 'false'])
-                            xbmcgui.Dialog().booleanSelector('when catalog STRMs=true, remove media extension from filename?','remove_ext')
-                            xbmcgui.Dialog().booleanSelector('when catalog STRMs=true, retain folder structure?','retain_folders')
+                            xbmcgui.Dialog().booleanSelector('catalog STRMs into folders according to movie/tv/other?','catalog', disable=['remove_ext', 'true', 'true'])
+                            xbmcgui.Dialog().booleanSelector('when catalog STRMs=true, retain folder structure?','retain_folders', False)
+                            xbmcgui.Dialog().booleanSelector('remove media extension from filename?','remove_ext')
                             xbmcgui.Dialog().booleanSelector('append resolution to STRM filename? (- ###p)','resolution')
                             xbmcgui.Dialog().textField('append the following to the resolution (- APPEND ###p)','append',isOptional=True)
                             xbmcgui.Dialog().booleanSelector('skip creating STRM for undetectable videos?','skip', True)
                             xbmcgui.Dialog().booleanSelector('create original quality STRM files?','original', True)
-                            xbmcgui.Dialog().booleanSelector('create google transcode quality STRM files?','transcode', False)
+                            xbmcgui.Dialog().booleanSelector('create separate google transcode quality STRM files?','transcode', False)
                             xbmcgui.Dialog().booleanSelector('skip partial files?','skippartial', False)
                         xbmcgui.Dialog().textField('override the url path with the following','host',isOptional=True,format='http://hostname:port', default=host)
                         xbmcgui.Dialog().textField('log STRM build process to this log file','logfile',isOptional=True)
